Fix BE-A: Resolve all static architecture, soft-delete, and N+1 issues